# moss-plagiarism-checker

./: .gitignore  README.md  main.py  pyproject.toml
src/: checker.py  student.py
