[tool.poetry]
name = "plagiarism-checker"
version = "1.0.0"
description = "Script that checks plagiarism using MOSS"
authors = ["Shubham Chawla <shubham_chawla@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
